--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <img src="/assets/img/IMG_1667.jpeg" class="hero__photoImg" alt="">
         </div>
         <div class="hero__data">
-            <p class="hero__dataRole">Forented Dev</p>
+            <p class="hero__dataRole">Forented Dev.</p>
             <h1 class="hero__dataName">Miłosz Karwacki</h1>
             <p class="hero__dataDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti ab nobis
                 accusamus dolorum magni nisi laborum ipsam consequatur! Officiis ab fugit deserunt magnam voluptatem
