--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section class="hero">
         <div class="hero__photo">
-            <img src="/assets/img/IMG_1667.jpeg" class="hero__photoImg" alt="">
+            <img src="assets/img/IMG_1667.jpeg" class="hero__photoImg" alt="">
         </div>
         <div class="hero__data">
             <p class="hero__dataRole">Forented Dev.</p>
